--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div>
+		<a href =https://www.youtube.com/results?search_query=ve+haniya>My current favourite song is [song_name]</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
