--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div>
-		<a href =https://www.youtube.com/results?search_query=ve+haniya>My current favourite song is [song_name]</a>
+		<a href =https://www.youtube.com/results?search_query=ve+haniya>My current favourite song is Ve Haniya</a>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
